--- a/albums-store.html
+++ b/albums-store.html
@@ -159,6 +159,7 @@
                                             <li><a href="categoryg.html">گیتار</a></li>
                                             <li><a href="categoryk.html">سازهای کوبه‌ای</a></li>
                                             <li><a href="categoryp.html">پیانو</a></li>
+                                            <li><a href="#">سایر</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="albums-store.html">آلبوم‌ها</a></li>
