--- a/categoryp.html
+++ b/categoryp.html
@@ -170,10 +170,10 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/music-store-img/Iranian-percussion-instrument.jpg);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb3.jpg);">
         <div class="bradcumbContent">
             <p>ببینید چه چیزهایی جدید است</p>
-            <h2>محصولات متنوعی از ساز های کوبه‌ای</h2>
+            <h2>محصولات متنوعی از پیانوها</h2>
         </div>
     </section>
     <!-- ##### Breadcumb Area End ##### -->
@@ -187,7 +187,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
                         </div>
                         <div class="event-text">
                             <h4>Squier Mini Strat</h4>
@@ -203,7 +203,39 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
+                        </div>
+                        <div class="event-text">
+                            <h4>Squier Mini Strat</h4>
+                            <div class="event-meta-data">
+                                <a href="#" class="event-place">۱۸,۸۵۰,۰۰۰ تومان</a>
+                            </div>
+                            <a href="#" class="btn see-more-btn">دیدن محصول</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Event Area -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-event-area mb-30">
+                        <div class="event-thumbnail">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
+                        </div>
+                        <div class="event-text">
+                            <h4>Squier Mini Strat</h4>
+                            <div class="event-meta-data">
+                                <a href="#" class="event-place">۱۸,۸۵۰,۰۰۰ تومان</a>
+                            </div>
+                            <a href="#" class="btn see-more-btn">دیدن محصول</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Event Area -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-event-area mb-30">
+                        <div class="event-thumbnail">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
                         </div>
                         <div class="event-text">
                             <h4>Squier Mini Strat</h4>
@@ -219,7 +251,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
                         </div>
                         <div class="event-text">
                             <h4>Squier Mini Strat</h4>
@@ -235,7 +267,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
                         </div>
                         <div class="event-text">
                             <h4>Squier Mini Strat</h4>
@@ -251,7 +283,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
                         </div>
                         <div class="event-text">
                             <h4>Squier Mini Strat</h4>
@@ -267,7 +299,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
                         </div>
                         <div class="event-text">
                             <h4>Squier Mini Strat</h4>
@@ -283,39 +315,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
-                        </div>
-                        <div class="event-text">
-                            <h4>Squier Mini Strat</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">۱۷,۸۵۰,۰۰۰ تومان</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">دیدن محصول</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Event Area -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-event-area mb-30">
-                        <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
-                        </div>
-                        <div class="event-text">
-                            <h4>Squier Mini Strat</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">۱۷,۸۵۰,۰۰۰ تومان</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">دیدن محصول</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Event Area -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-event-area mb-30">
-                        <div class="event-thumbnail">
-                            <img src="img/music-store-img/tempo-darbuka-instrument.webp" alt="">
+                            <img src="img/music-store-img/piano1.jpg" alt="">
                         </div>
                         <div class="event-text">
                             <h4>Squier Mini Strat</h4>
