توضیحی درباره تغییرات

--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,9 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <!-- Title -->
     <title>وان موزیک - قالب HTML5 موسیقی مدرن</title>
-
-    <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
-
-    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-
     <style>
         body {
             direction: rtl;
@@ -62,7 +54,6 @@
 </head>
 
 <body>
-    <!-- Preloader -->
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="lds-ellipsis">
             <div></div>
@@ -72,24 +63,20 @@
         </div>
     </div>
 
-    <!-- ##### Header Area Start ##### -->
     <header class="header-area">
         <div class="oneMusic-main-menu">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
-                        <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
                         </div>
 
-                        <!-- Menu -->
                         <div class="classy-menu">
                             <div class="classycloseIcon">
                                 <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                             </div>
 
-                            <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
                                     <li><a href="index.html">خانه</a></li>
@@ -107,19 +94,14 @@
                                     <li><a href="contact.html">تماس با ما</a></li>
                                 </ul>
                             </div>
-                            <!-- Nav End -->
                         </div>
 
-                        <!-- Nav brand -->
                         <a href="index.html" class="nav-brand"><img src="img/core-img/logo.png" alt="لوگو"></a>
-                        <!-- Login/Register & Cart Button -->
                         <div class="login-register-cart-button d-flex align-items-center">
-                            <!-- Login/Register -->
                             <div class="login-register-btn mr-50">
                                 <a href="login.html" id="loginBtn">ورود / ثبت نام</a>
                             </div>
 
-                            <!-- Cart Button -->
                             <div class="cart-btn">
                                 <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
                             </div>
@@ -129,30 +111,24 @@
             </div>
         </div>
     </header>
-    <!-- ##### Header Area End ##### -->
 
-    <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb.jpg);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb3.jpg);">
         <div class="bradcumbContent">
             <p>ببینید چه چیزهایی جدید است</p>
             <h2>راه تماس با ما</h2>
         </div>
     </section>
-    <!-- ##### Breadcumb Area End ##### -->
 
-    <!-- ##### Contact Area Start ##### -->
     <section class="contact-area section-padding-100-0">
         <div class="container">
             <div class="row">
 
                 <div class="col-12 col-lg-3">
                     <div class="contact-content mb-100">
-                        <!-- Title -->
                         <div class="contact-title mb-50">
                             <h5>اطلاعات تماس</h5>
                         </div>
 
-                        <!-- Single Contact Info -->
                         <div class="single-contact-info d-flex align-items-center">
                             <div class="icon mr-15">
                                 <span class="icon-placeholder"></span>
@@ -160,7 +136,6 @@
                             <p>خیابان ولیعصر، جنب پل پارک وی،</p>
                         </div>
 
-                        <!-- Single Contact Info -->
                         <div class="single-contact-info d-flex align-items-center">
                             <div class="icon mr-15">
                                 <span class="icon-smartphone"></span>
@@ -168,7 +143,6 @@
                             <p>۰۲۱-۱۲۳۴۵۶۷۸</p>
                         </div>
 
-                        <!-- Single Contact Info -->
                         <div class="single-contact-info d-flex align-items-center">
                             <div class="icon mr-15">
                                 <span class="icon-mail"></span>
@@ -176,7 +150,6 @@
                             <p>yourmail@gmail.com</p>
                         </div>
 
-                        <!-- Contact Social Info -->
                         <div class="contact-social-info mt-50">
                             <a href="#" data-toggle="tooltip" data-placement="top" title="Pinterest"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
                             <a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -190,7 +163,6 @@
                 </div>
 
                 <div class="col-12 col-lg-9">
-                    <!-- ##### Google Maps ##### -->
                     <div class="map-area mb-100">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.472698683288!2d51.38136581526064!3d35.696111980190846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f8e0188af1c7b97%3A0x55e0d6e6e2826d80!2sTehran%2C%20Iran!5e0!3m2!1sen!2s!4v1612345678901"
                             allowfullscreen></iframe>
@@ -200,9 +172,7 @@
             </div>
         </div>
     </section>
-    <!-- ##### Contact Area End ##### -->
 
-    <!-- ##### Contact Area Start ##### -->
     <section class="contact-area section-padding-0-100">
         <div class="container">
             <div class="row">
@@ -216,7 +186,6 @@
 
             <div class="row">
                 <div class="col-12">
-                    <!-- Contact Form Area -->
                     <div class="contact-form-area">
                         <form action="#" method="post">
                             <div class="row">
@@ -250,9 +219,7 @@
             </div>
         </div>
     </section>
-    <!-- ##### Contact Area End ##### -->
 
-    <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area">
         <div class="container">
             <div class="row d-flex flex-wrap align-items-center">
@@ -260,12 +227,10 @@
                     <a href="#"><img src="img/core-img/logo.png" alt="لوگو"></a>
                     <p class="copywrite-text">
                         <a href="#">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             Copyright &copy;
                             <script>
                                 document.write(new Date().getFullYear());
                             </script> تمامی حقوق محفوظ می‌باشد
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </a>
                     </p>
                 </div>
@@ -284,18 +249,11 @@
             </div>
         </div>
     </footer>
-    <!-- ##### Footer Area End ##### -->
 
-    <!-- ##### All Javascript Script ##### -->
-    <!-- jQuery-2.2.4 js -->
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
-    <!-- Popper js -->
     <script src="js/bootstrap/popper.min.js"></script>
-    <!-- Bootstrap js -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
-    <!-- All Plugins js -->
     <script src="js/plugins/plugins.js"></script>
-    <!-- Active js -->
     <script src="js/active.js"></script>
 </body>
 
