--- a/albums-store.html
+++ b/albums-store.html
@@ -33,7 +33,6 @@
         .footer-nav ul li a {
             text-align: right;
         }
-        /* Styles for the search box */
         
         .search-box {
             position: absolute;
@@ -71,7 +70,6 @@
         .search-box button:hover {
             color: #000;
         }
-        /* Styles for the product area */
         
         .product-thumb img {
             width: 100%;
@@ -122,7 +120,6 @@
 </head>
 
 <body dir="rtl">
-    <!-- Preloader -->
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="lds-ellipsis">
             <div></div>
@@ -131,26 +128,20 @@
             <div></div>
         </div>
     </div>
-
-    <!-- ##### Header Area Start ##### -->
-    <!-- ##### Header Area Start ##### -->
     <header class="header-area">
         <div class="oneMusic-main-menu">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
-                        <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
                         </div>
 
-                        <!-- Menu -->
                         <div class="classy-menu">
                             <div class="classycloseIcon">
                                 <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                             </div>
 
-                            <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
                                     <li><a href="index.html">خانه</a></li>
@@ -168,26 +159,20 @@
                                     <li><a href="contact.html">تماس با ما</a></li>
                                 </ul>
                             </div>
-                            <!-- Nav End -->
                         </div>
 
-                        <!-- Nav brand -->
                         <a href="index.html" class="nav-brand"><img src="img/core-img/logo.png" alt="لوگو"></a>
 
-                        <!-- Search Box -->
                         <div class="search-box">
                             <input type="text" placeholder="جستجو...">
                             <button type="submit"><i class="fa fa-search"></i></button>
                         </div>
 
-                        <!-- Login/Register & Cart Button -->
                         <div class="login-register-cart-button d-flex align-items-center">
-                            <!-- Login/Register -->
                             <div class="login-register-btn mr-50">
                                 <a href="login.html" id="loginBtn">ورود / ثبت نام</a>
                             </div>
 
-                            <!-- Cart Button -->
                             <div class="cart-btn">
                                 <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
                             </div>
@@ -197,18 +182,12 @@
             </div>
         </div>
     </header>
-    <!-- ##### Header Area End ##### -->
-
-    <!-- ##### Breadcumb Area Start ##### -->
     <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb3.jpg);">
         <div class="bradcumbContent">
             <p>جدیدترین‌ها را ببینید</p>
             <h2>آخرین آلبوم‌ها</h2>
         </div>
     </section>
-    <!-- ##### Breadcumb Area End ##### -->
-
-    <!-- ##### Album Catagory Area Start ##### -->
     <section class="album-catagory section-padding-100-0">
         <div class="container">
             <div class="row">
@@ -248,7 +227,6 @@
 
             <div class="row oneMusic-albums">
 
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t c p">
                     <div class="single-album">
                         <img src="img/bg-img/a1.jpg" alt="">
@@ -261,7 +239,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item s e q">
                     <div class="single-album">
                         <img src="img/bg-img/a2.jpg" alt="">
@@ -274,7 +251,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item w f r">
                     <div class="single-album">
                         <img src="img/bg-img/a3.jpg" alt="">
@@ -287,7 +263,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t g u">
                     <div class="single-album">
                         <img src="img/bg-img/a4.jpg" alt="">
@@ -299,8 +274,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d h v">
                     <div class="single-album">
                         <img src="img/bg-img/a5.jpg" alt="">
@@ -312,8 +285,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t i x">
                     <div class="single-album">
                         <img src="img/bg-img/a6.jpg" alt="">
@@ -326,7 +297,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item b j y">
                     <div class="single-album">
                         <img src="img/bg-img/a7.jpg" alt="">
@@ -339,7 +309,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item a k z">
                     <div class="single-album">
                         <img src="img/bg-img/a8.jpg" alt="">
@@ -352,7 +321,77 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
+
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item w l number">
+                    <div class="single-album">
+                        <img src="img/bg-img/a9.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>Will I am</h5>
+                            </a>
+                            <p>First</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t g u">
+                    <div class="single-album">
+                        <img src="img/bg-img/a4.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>The Cure</h5>
+                            </a>
+                            <p>Second Song</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d h v">
+                    <div class="single-album">
+                        <img src="img/bg-img/a5.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>DJ SMITH</h5>
+                            </a>
+                            <p>The Album</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t i x">
+                    <div class="single-album">
+                        <img src="img/bg-img/a6.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>The Ustopable</h5>
+                            </a>
+                            <p>Unplugged</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item b j y">
+                    <div class="single-album">
+                        <img src="img/bg-img/a7.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>Beyonce</h5>
+                            </a>
+                            <p>Songs</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item a k z">
+                    <div class="single-album">
+                        <img src="img/bg-img/a8.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>Aam Smith</h5>
+                            </a>
+                            <p>Underground</p>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item w l number">
                     <div class="single-album">
                         <img src="img/bg-img/a9.jpg" alt="">
@@ -365,7 +404,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d m">
                     <div class="single-album">
                         <img src="img/bg-img/a10.jpg" alt="">
@@ -378,7 +416,29 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t n">
+                    <div class="single-album">
+                        <img src="img/bg-img/a11.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>The Ustopable</h5>
+                            </a>
+                            <p>Unplugged</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item d m">
+                    <div class="single-album">
+                        <img src="img/bg-img/a10.jpg" alt="">
+                        <div class="album-info">
+                            <a href="#">
+                                <h5>DJ SMITH</h5>
+                            </a>
+                            <p>The Album</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t n">
                     <div class="single-album">
                         <img src="img/bg-img/a11.jpg" alt="">
@@ -391,7 +451,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album -->
                 <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item b o">
                     <div class="single-album">
                         <img src="img/bg-img/a12.jpg" alt="">
@@ -407,23 +466,21 @@
             </div>
         </div>
     </section>
-    <!-- ##### Album Catagory Area End ##### -->
 
-    <!-- ##### Buy Now Area Start ##### -->
     <div class="oneMusic-buy-now-area mb-100">
         <div class="container">
             <div class="row">
 
-                <!-- Single Album Area -->
+
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="single-album-area">
                         <div class="album-thumb">
                             <img src="img/bg-img/b1.jpg" alt="">
-                            <!-- Album Price -->
+
                             <div class="album-price">
                                 <p>120.000تومان</p>
                             </div>
-                            <!-- Play Icon -->
+
                             <div class="play-icon">
                                 <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
                             </div>
@@ -437,7 +494,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album Area -->
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="single-album-area">
                         <div class="album-thumb">
@@ -452,7 +508,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album Area -->
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="single-album-area">
                         <div class="album-thumb">
@@ -467,7 +522,6 @@
                     </div>
                 </div>
 
-                <!-- Single Album Area -->
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="single-album-area">
                         <div class="album-thumb">
@@ -493,9 +547,7 @@
             </div>
         </div>
     </div>
-    <!-- ##### Buy Now Area End ##### -->
 
-    <!-- ##### Add Area Start ##### -->
     <div class="add-area mb-100">
         <div class="container">
             <div class="row">
@@ -507,14 +559,10 @@
             </div>
         </div>
     </div>
-    <!-- ##### Add Area End ##### -->
 
-    <!-- ##### Song Area Start ##### -->
     <div class="one-music-songs-area mb-70">
         <div class="container">
             <div class="row">
-
-                <!-- Single Song Area -->
                 <div class="col-12">
                     <div class="single-song-area mb-30 d-flex flex-wrap align-items-end">
                         <div class="song-thumbnail">
@@ -530,8 +578,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Single Song Area -->
                 <div class="col-12">
                     <div class="single-song-area mb-30 d-flex flex-wrap align-items-end">
                         <div class="song-thumbnail">
@@ -548,7 +594,6 @@
                     </div>
                 </div>
 
-                <!-- Single Song Area -->
                 <div class="col-12">
                     <div class="single-song-area mb-30 d-flex flex-wrap align-items-end">
                         <div class="song-thumbnail">
@@ -564,8 +609,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Single Song Area -->
                 <div class="col-12">
                     <div class="single-song-area mb-30 d-flex flex-wrap align-items-end">
                         <div class="song-thumbnail">
@@ -585,9 +628,6 @@
             </div>
         </div>
     </div>
-    <!-- ##### Song Area End ##### -->
-
-    <!-- ##### Contact Area Start ##### -->
     <section class="contact-area section-padding-100 bg-img bg-overlay bg-fixed has-bg-img" style="background-image: url(img/bg-img/bg-2.jpg);">
         <div class="container">
             <div class="row">
@@ -601,7 +641,6 @@
 
             <div class="row">
                 <div class="col-12">
-                    <!-- Contact Form Area -->
                     <div class="contact-form-area">
                         <form action="#" method="post">
                             <div class="row">
@@ -635,9 +674,6 @@
             </div>
         </div>
     </section>
-    <!-- ##### Contact Area End ##### -->
-
-    <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area">
         <div class="container">
             <div class="row d-flex flex-wrap align-items-center">
@@ -645,12 +681,12 @@
                     <a href="#"><img src="img/core-img/logo.png" alt="لوگو"></a>
                     <p class="copywrite-text">
                         <a href="#">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
                             Copyright &copy;
                             <script>
                                 document.write(new Date().getFullYear());
                             </script> تمامی حقوق محفوظ می‌باشد
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
                         </a>
                     </p>
                 </div>
@@ -669,9 +705,7 @@
             </div>
         </div>
     </footer>
-    <!-- ##### Footer Area End ##### -->
 
-    <!-- ##### All Javascript Script ##### -->
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
     <script src="js/bootstrap/popper.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
