--- a/categoryg.html
+++ b/categoryg.html
@@ -6,17 +6,9 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <!-- Title -->
-    <title>وان موزیک - قالب HTML5 موسیقی مدرن</title>
-
-    <!-- Favicon -->
+    <title>nogan-web</title>
     <link rel="icon" href="img/core-img/favicon.ico">
-
-    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-
     <style>
         body {
             direction: rtl;
@@ -93,7 +85,6 @@
 </head>
 
 <body>
-    <!-- Preloader -->
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="lds-ellipsis">
             <div></div>
@@ -103,24 +94,20 @@
         </div>
     </div>
 
-    <!-- ##### Header Area Start ##### -->
     <header class="header-area">
         <div class="oneMusic-main-menu">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
-                        <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
                         </div>
 
-                        <!-- Menu -->
                         <div class="classy-menu">
                             <div class="classycloseIcon">
                                 <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                             </div>
 
-                            <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
                                     <li><a href="index.html">خانه</a></li>
@@ -138,26 +125,20 @@
                                     <li><a href="contact.html">تماس با ما</a></li>
                                 </ul>
                             </div>
-                            <!-- Nav End -->
                         </div>
 
-                        <!-- Nav brand -->
                         <a href="index.html" class="nav-brand"><img src="img/core-img/logo.png" alt="لوگو"></a>
 
-                        <!-- Search Box -->
                         <div class="search-box">
                             <input type="text" placeholder="جستجو...">
                             <button type="submit"><i class="fa fa-search"></i></button>
                         </div>
 
-                        <!-- Login/Register & Cart Button -->
                         <div class="login-register-cart-button d-flex align-items-center">
-                            <!-- Login/Register -->
                             <div class="login-register-btn mr-50">
                                 <a href="login.html" id="loginBtn">ورود / ثبت نام</a>
                             </div>
 
-                            <!-- Cart Button -->
                             <div class="cart-btn">
                                 <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
                             </div>
@@ -167,23 +148,33 @@
             </div>
         </div>
     </header>
-    <!-- ##### Header Area End ##### -->
 
-    <!-- ##### Breadcumb Area Start ##### -->
     <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/music-store-img/R.jfif);">
         <div class="bradcumbContent">
             <p>ببینید چه چیزهایی جدید است</p>
             <h2>محصولات متنوعی از گیتارها</h2>
         </div>
     </section>
-    <!-- ##### Breadcumb Area End ##### -->
 
-    <!-- ##### Events Area Start ##### -->
     <section class="events-area section-padding-100">
         <div class="container">
             <div class="row">
 
-                <!-- Single Event Area -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-event-area mb-30">
+                        <div class="event-thumbnail">
+                            <img src="img/music-store-img/guitar1.jpg" alt="">
+                        </div>
+                        <div class="event-text">
+                            <h4>Squier Mini Strat</h4>
+                            <div class="event-meta-data">
+                                <a href="#" class="event-place">۲۰,۵۰۰,۰۰۰ تومان</a>
+                            </div>
+                            <a href="product-detail.html" class="btn see-more-btn">دیدن محصول</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
@@ -199,7 +190,6 @@
                     </div>
                 </div>
 
-                <!-- Single Event Area -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
@@ -215,7 +205,6 @@
                     </div>
                 </div>
 
-                <!-- Single Event Area -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
@@ -231,7 +220,6 @@
                     </div>
                 </div>
 
-                <!-- Single Event Area -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
@@ -247,7 +235,6 @@
                     </div>
                 </div>
 
-                <!-- Single Event Area -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
@@ -263,7 +250,6 @@
                     </div>
                 </div>
 
-                <!-- Single Event Area -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
@@ -279,7 +265,6 @@
                     </div>
                 </div>
 
-                <!-- Single Event Area -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
@@ -295,23 +280,6 @@
                     </div>
                 </div>
 
-                <!-- Single Event Area -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-event-area mb-30">
-                        <div class="event-thumbnail">
-                            <img src="img/music-store-img/guitar1.jpg" alt="">
-                        </div>
-                        <div class="event-text">
-                            <h4>Squier Mini Strat</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">۲۰,۵۰۰,۰۰۰ تومان</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">دیدن محصول</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Event Area -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
@@ -338,13 +306,10 @@
             </div>
         </div>
     </section>
-    <!-- ##### Events Area End ##### -->
 
-    <!-- ##### Newsletter & Testimonials Area Start ##### -->
     <section class="newsletter-testimonials-area">
         <div class="container">
             <div class="row">
-                <!-- Newsletter Area -->
                 <div class="col-12 col-lg-6">
                     <div class="newsletter-area mb-100">
                         <div class="section-heading text-left mb-50">
@@ -360,16 +325,13 @@
                     </div>
                 </div>
 
-                <!-- Testimonials Area -->
                 <div class="col-12 col-lg-6">
                     <div class="testimonials-area mb-100 bg-img bg-overlay" style="background-image: url(img/bg-img/bg-3.jpg);">
                         <div class="section-heading white text-left mb-50">
                             <p>ببینید چه چیزهایی جدید است</p>
                             <h2>نظرات</h2>
                         </div>
-                        <!-- Testimonial Slide -->
                         <div class="testimonials-slide owl-carousel">
-                            <!-- Single Slide -->
                             <div class="single-slide">
                                 <p>نام تریکستج اکس ول ماگنا تینسیدنت، اوت پورتا نیسل فینیبوس. ویواموس او دولور او کوام واریوس روت‌رام. فوس‌سه نک جاستو آید سم آلیکام فریگیلا نک نون لاکوس. سوسپندیسه ایت لوبورتیس نیسی، اک کورسوس اودیو. ویواموس نیب ولت، روت‌رام.</p>
                                 <div class="testimonial-info d-flex align-items-center">
@@ -379,7 +341,6 @@
                                     <p>ویلیام اسمیت، مشتری</p>
                                 </div>
                             </div>
-                            <!-- Single Slide -->
                             <div class="single-slide">
                                 <p>نام تریکستج اکس ول ماگنا تینسیدنت، اوت پورتا نیسل فینیبوس. ویواموس او دولور او کوام واریوس روت‌رام. فوس‌سه نک جاستو آید سم آلیکام فریگیلا نک نون لاکوس. سوسپندیسه ایت لوبورتیس نیسی، اک کورسوس اودیو. ویواموس نیب ولت، روت‌رام.</p>
                                 <div class="testimonial-info d-flex align-items-center">
@@ -396,9 +357,7 @@
             </div>
         </div>
     </section>
-    <!-- ##### Newsletter & Testimonials Area End ##### -->
 
-    <!-- ##### Contact Area Start ##### -->
     <section class="contact-area section-padding-100 bg-img bg-overlay bg-fixed has-bg-img" style="background-image: url(img/bg-img/bg-2.jpg);">
         <div class="container">
             <div class="row">
@@ -412,7 +371,6 @@
 
             <div class="row">
                 <div class="col-12">
-                    <!-- Contact Form Area -->
                     <div class="contact-form-area">
                         <form action="#" method="post">
                             <div class="row">
@@ -446,9 +404,7 @@
             </div>
         </div>
     </section>
-    <!-- ##### Contact Area End ##### -->
 
-    <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area">
         <div class="container">
             <div class="row d-flex flex-wrap align-items-center">
@@ -456,12 +412,10 @@
                     <a href="#"><img src="img/core-img/logo.png" alt="لوگو"></a>
                     <p class="copywrite-text ">
                         <a href="# ">
-                                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                         Copyright &copy;
                                         <script>
                                             document.write(new Date().getFullYear());
                                         </script> تمامی حقوق محفوظ میباشد
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                     </a>
                     </p>
                 </div>
@@ -480,18 +434,11 @@
             </div>
         </div>
     </footer>
-    <!-- ##### Footer Area End ##### -->
 
-    <!-- ##### All Javascript Script ##### -->
-    <!-- jQuery-2.2.4 js -->
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
-    <!-- Popper js -->
     <script src="js/bootstrap/popper.min.js"></script>
-    <!-- Bootstrap js -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
-    <!-- All Plugins js -->
     <script src="js/plugins/plugins.js"></script>
-    <!-- Active js -->
     <script src="js/active.js"></script>
 </body>
 
