--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
         .search-box button:hover {
             color: #000;
         }
-        /* Styles for the product area */
         
         .product-thumb img {
             width: 100%;
@@ -122,7 +121,6 @@
 </head>
 
 <body dir="rtl">
-    <!-- Preloader -->
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="lds-ellipsis">
             <div></div>
@@ -132,28 +130,24 @@
         </div>
     </div>
 
-    <!-- ##### Header Area Start ##### -->
     <header class="header-area">
         <div class="oneMusic-main-menu">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
-                        <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
                         </div>
 
-                        <!-- Menu -->
                         <div class="classy-menu">
                             <div class="classycloseIcon">
                                 <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                             </div>
 
-                            <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
                                     <li><a href="index.html">خانه</a></li>
-                                    <li><a href="">محصولات</a>
+                                    <li><a href="#">محصولات</a>
                                         <ul class="dropdown">
                                             <li><a href="categoryg.html">گیتار</a></li>
                                             <li><a href="categoryk.html">سازهای کوبه‌ای</a></li>
@@ -167,26 +161,20 @@
                                     <li><a href="contact.html">تماس با ما</a></li>
                                 </ul>
                             </div>
-                            <!-- Nav End -->
                         </div>
 
-                        <!-- Nav brand -->
                         <a href="index.html" class="nav-brand"><img src="img/core-img/logo.png" alt="لوگو"></a>
 
-                        <!-- Search Box -->
                         <div class="search-box">
                             <input type="text" placeholder="جستجو...">
                             <button type="submit"><i class="fa fa-search"></i></button>
                         </div>
 
-                        <!-- Login/Register & Cart Button -->
                         <div class="login-register-cart-button d-flex align-items-center">
-                            <!-- Login/Register -->
                             <div class="login-register-btn mr-50">
                                 <a href="login.html" id="loginBtn">ورود / ثبت نام</a>
                             </div>
 
-                            <!-- Cart Button -->
                             <div class="cart-btn">
                                 <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
                             </div>
@@ -196,9 +184,7 @@
             </div>
         </div>
     </header>
-    <!-- ##### Header Area End ##### -->
 
-    <!-- ##### Hero Area Start ##### -->
     <section class="hero-area">
         <div class="single-hero-slide d-flex align-items-center justify-content-center">
             <div class="slide-img bg-img" style="background-image: url(img/bg-img/bg-1.jpg);"></div>
@@ -215,9 +201,7 @@
             </div>
         </div>
     </section>
-    <!-- ##### Hero Area End ##### -->
 
-    <!-- ##### Latest Albums Area Start ##### -->
     <section class="latest-albums-area section-padding-100">
         <div class="container">
             <div class="row">
@@ -240,7 +224,6 @@
             <div class="row">
                 <div class="col-12">
                     <div class="albums-slideshow owl-carousel">
-                        <!-- Single Album -->
                         <div class="single-album">
                             <img src="img/music-store-img/guitar1.jpg" alt="">
                             <div class="album-info">
@@ -251,7 +234,6 @@
                             </div>
                         </div>
 
-                        <!-- Single Album -->
                         <div class="single-album">
                             <img src="img/music-store-img/guitar1.jpg" alt="">
                             <div class="album-info">
@@ -262,7 +244,6 @@
                             </div>
                         </div>
 
-                        <!-- Single Album -->
                         <div class="single-album">
                             <img src="img/music-store-img/guitar1.jpg" alt="">
                             <div class="album-info">
@@ -273,7 +254,6 @@
                             </div>
                         </div>
 
-                        <!-- Single Album -->
                         <div class="single-album">
                             <img src="img/bg-img/a4.jpg" alt="">
                             <div class="album-info">
@@ -284,7 +264,6 @@
                             </div>
                         </div>
 
-                        <!-- Single Album -->
                         <div class="single-album">
                             <img src="img/bg-img/a5.jpg" alt="">
                             <div class="album-info">
@@ -295,7 +274,6 @@
                             </div>
                         </div>
 
-                        <!-- Single Album -->
                         <div class="single-album">
                             <img src="img/bg-img/a6.jpg" alt="">
                             <div class="album-info">
@@ -306,7 +284,6 @@
                             </div>
                         </div>
 
-                        <!-- Single Album -->
                         <div class="single-album">
                             <img src="img/bg-img/a7.jpg" alt="">
                             <div class="album-info">
@@ -321,9 +298,7 @@
             </div>
         </div>
     </section>
-    <!-- ##### Latest Albums Area End ##### -->
 
-    <!-- ##### Buy Now Area Start ##### -->
     <section class="oneMusic-buy-now-area has-fluid bg-gray section-padding-100">
         <div class="container-fluid">
             <div class="row">
@@ -336,7 +311,6 @@
             </div>
 
             <div class="row">
-                <!-- Single Product Area -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-product-area wow fadeInUp" data-wow-delay="100ms">
                         <div class="product-thumb">
@@ -355,7 +329,6 @@
                     </div>
                 </div>
 
-                <!-- Single Product Area -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-product-area wow fadeInUp" data-wow-delay="200ms">
                         <div class="product-thumb">
@@ -374,7 +347,6 @@
                     </div>
                 </div>
 
-                <!-- Single Product Area -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-product-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="product-thumb">
@@ -393,7 +365,6 @@
                     </div>
                 </div>
 
-                <!-- Single Product Area -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 ">
                     <div class="single-product-area wow fadeInUp " data-wow-delay="400ms ">
                         <div class="product-thumb ">
@@ -412,7 +383,6 @@
                     </div>
                 </div>
 
-                <!-- Single Product Area -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 ">
                     <div class="single-product-area wow fadeInUp " data-wow-delay="500ms ">
                         <div class="product-thumb ">
@@ -431,7 +401,6 @@
                     </div>
                 </div>
 
-                <!-- Single Product Area -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 ">
                     <div class="single-product-area wow fadeInUp " data-wow-delay="600ms ">
                         <div class="product-thumb ">
@@ -460,9 +429,7 @@
             </div>
         </div>
     </section>
-    <!-- ##### Buy Now Area End ##### -->
 
-    <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area ">
         <div class="container ">
             <div class="row d-flex flex-wrap align-items-center ">
@@ -470,12 +437,10 @@
                     <a href="# "><img src="img/core-img/logo.png " alt="لوگو "></a>
                     <p class="copywrite-text ">
                         <a href="# ">
-                                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                         Copyright &copy;
                                         <script>
                                             document.write(new Date().getFullYear());
                                         </script> تمامی حقوق محفوظ میباشد
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                     </a>
                     </p>
                 </div>
@@ -494,20 +459,12 @@
             </div>
         </div>
     </footer>
-    <!-- ##### Footer Area End ##### -->
 
-    <!-- ##### All Javascript Script ##### -->
-    <!-- jQuery-2.2.4 js -->
     <script src="js/jquery/jquery-2.2.4.min.js "></script>
-    <!-- Popper js -->
     <script src="js/bootstrap/popper.min.js "></script>
-    <!-- Bootstrap js -->
     <script src="js/bootstrap/bootstrap.min.js "></script>
-    <!-- All Plugins js -->
     <script src="js/plugins/plugins.js "></script>
-    <!-- Active js -->
     <script src="js/active.js "></script>
-    <!-- Custom Audio Play on Hover -->
     <script>
         $(document).ready(function() {
             $(".owl-carousel").owlCarousel({
