--- a/login.html
+++ b/login.html
@@ -6,17 +6,9 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <!-- Title -->
     <title>وان موزیک - قالب HTML5 موسیقی مدرن</title>
-
-    <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
-
-    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-
     <style>
         body {
             direction: rtl;
@@ -56,7 +48,6 @@
 </head>
 
 <body>
-    <!-- Preloader -->
     <div class="preloader d-flex align-items-center justify-content-center">
         <div class="lds-ellipsis">
             <div></div>
@@ -65,28 +56,24 @@
             <div></div>
         </div>
     </div>
-    <!-- ##### Header Area Start ##### -->
     <header class="header-area">
         <div class="oneMusic-main-menu">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
-                        <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
                         </div>
 
-                        <!-- Menu -->
                         <div class="classy-menu">
                             <div class="classycloseIcon">
                                 <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                             </div>
 
-                            <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
                                     <li><a href="index.html">خانه</a></li>
-                                    <li><a href="">محصولات</a>
+                                    <li><a href="#">محصولات</a>
                                         <ul class="dropdown">
                                             <li><a href="categoryg.html">گیتار</a></li>
                                             <li><a href="categoryk.html">سازهای کوبه‌ای</a></li>
@@ -100,19 +87,10 @@
                                     <li><a href="contact.html">تماس با ما</a></li>
                                 </ul>
                             </div>
-                            <!-- Nav End -->
                         </div>
 
-                        <!-- Nav brand -->
                         <a href="index.html" class="nav-brand"><img src="img/core-img/logo.png" alt="لوگو"></a>
-                        <!-- Login/Register & Cart Button -->
                         <div class="login-register-cart-button d-flex align-items-center">
-                            <!-- Login/Register -->
-                            <div class="login-register-btn mr-50">
-                                <a href="login.html" id="loginBtn">ورود / ثبت نام</a>
-                            </div>
-
-                            <!-- Cart Button -->
                             <div class="cart-btn">
                                 <p><span class="icon-shopping-cart"></span> <span class="quantity">1</span></p>
                             </div>
@@ -122,91 +100,77 @@
             </div>
         </div>
     </header>
-    <!-- ##### Header Area End ##### -->
 
-    <!-- ##### Breadcumb Area Start ##### -->
     <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb3.jpg);">
         <div class="bradcumbContent">
             <p>ببینید چه چیزهایی جدید است</p>
             <h2>ورود</h2>
         </div>
     </section>
-    <!-- ##### Breadcumb Area End ##### -->
 
-    <!-- ##### Login Area Start ##### -->
     <section class="login-area section-padding-100">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-8">
                     <div class="login-content">
                         <h3>خوش آمدید</h3>
-                        <!-- Login Form -->
                         <div class="login-form">
-                            <form action="#" method="post">
+                            <div id="loginError" style="color: red;"></div>
+                            <form id="loginForm" style="color: navy;">
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">آدرس ایمیل</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="ایمیل خود را وارد کنید">
-                                    <small id="emailHelp" class="form-text text-muted"><i class="fa fa-lock mr-2"></i>ایمیل شما را با کسی به اشتراک نمی‌گذاریم.</small>
+                                    <label for="username">نام کاربری</label>
+                                    <input type="text" class="form-control" id="username" name="username" placeholder="نام کاربری خود را وارد کنید" required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1">گذرواژه</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="گذرواژه">
+                                    <label for="password">گذرواژه</label>
+                                    <input type="password" class="form-control" id="password" name="password" placeholder="گذرواژه" required>
                                 </div>
                                 <button type="submit" class="btn oneMusic-btn mt-30">ورود</button>
                             </form>
+                            <p style="text-align: center;"><a href="register.html" style="color: grey;">ثبت نام کنید</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ##### Login Area End ##### -->
 
-    <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area">
         <div class="container">
             <div class="row d-flex flex-wrap align-items-center">
                 <div class="col-12 col-md-6">
                     <a href="#"><img src="img/core-img/logo.png" alt="لوگو"></a>
-                    <p class="copywrite-text ">
-                        <a href="# ">
-                                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                        Copyright &copy;
-                                        <script>
-                                            document.write(new Date().getFullYear());
-                                        </script> تمامی حقوق محفوظ میباشد
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    </a>
+                    <p class="copywrite-text">
+                        <a href="#">
+                            Copyright &copy;
+                            <script>
+                                document.write(new Date().getFullYear());
+                            </script> تمامی حقوق محفوظ میباشد
+                        </a>
                     </p>
                 </div>
 
                 <div class="col-12 col-md-6">
                     <div class="footer-nav">
                         <ul>
-                            <li><a href="index.html ">صفحه اصلی</a></li>
-                            <li><a href="albums-store.html ">آلبوم‌ها</a></li>
-                            <li><a href="blog.html ">اخبار</a></li>
-                            <li><a href="services.html ">خدمات ما</a></li>
-                            <li><a href="contact.html ">تماس با ما</a></li>
+                            <li><a href="index.html">صفحه اصلی</a></li>
+                            <li><a href="albums-store.html">آلبوم‌ها</a></li>
+                            <li><a href="blog.html">اخبار</a></li>
+                            <li><a href="services.html">خدمات ما</a></li>
+                            <li><a href="contact.html">تماس با ما</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- ##### Footer Area End ##### -->
 
-    <!-- ##### All Javascript Script ##### -->
-    <!-- jQuery-2.2.4 js -->
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
-    <!-- Popper js -->
     <script src="js/bootstrap/popper.min.js"></script>
-    <!-- Bootstrap js -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
-    <!-- All Plugins js -->
     <script src="js/plugins/plugins.js"></script>
-    <!-- Active js -->
     <script src="js/active.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
